update APIs documentation
